rivals: held-use fire — the shooter fires from the use tick, the roller rolls and flicks
A vanilla client repeats a held right click every four ticks, which is a
ceiling of five shots a second and simply not a fire rate a shooter can have.
So the shooter and the roller become held-use items: the press starts using and
Item#onUseTick does the work every tick until the button is let go. The shooter
fires whenever its own cooldown is up — which is what finally makes `cooldown`
the fire rate rather than a floor under the client's repeat — and fires on the
press as well, so there is no dead frame before the first shot. The slosher
stays one slosh a click, because twelve ticks is slower than the repeat anyway;
the charger is still held for its charge and fired with the left click.

The roller rolls. Holding it down lays a strip three cells wide one step ahead
of the feet, on whatever floor a short ray down finds, so a roll goes over
slabs and down stairs without hanging its paint in the air; it costs an ink
every sixteen ticks, carries 8% more speed, and runs over anyone from another
team the head reaches for most of their health, once per victim per ten ticks.
It paints only where the player moves — measured from two positions, not from
the server's guess at a client's velocity — so a roller held down on the spot
cannot repaint one cell forever. Letting go under flick_tap ticks is a tap and
throws the bucketful; anything longer was a roll and throws nothing, which is
the only way a press and a release can tell the two gestures apart.

The tank is 100, which is Splatoon's own scale, so every ink cost is that
game's percentage with no factor in front of it; standing in your own ink fills
it in ten seconds on foot and three as a squid, the rates Splatoon 1 uses. A
stack written when the tank was 40 comes back part-full rather than wrong, and
get() clamps either way.

PaintDamage arrives with the roll and takes vanilla's damage cooldown off
before and after every paint hit. 